--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
-  "hosting": {
+  "hosting": [{
+    "target": "default",
     "public": "build",
     "ignore": [
       "firebase.json",
@@ -12,5 +13,14 @@
         "destination": "/index.html"
       }
     ]
-  }
+  },{
+    "target": "lp",
+    "public": "lp-public",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }]
 }
