--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-share": "^4.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "typesync": "^0.8.0",
     "web-vitals": "^1.0.1"
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
